--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <body>
     <div class="searchbar-box">
       <input type="text" name="" value="" placeholder="name of film">
-      <button type="button" name="button">Search</button>
-
+      <button class="button" type="button" name="button">Search</button>
     </div>
 
     <!-- Script -->
