--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="https://momentjs.com/downloads/moment.min.js" charset="utf-8"></script>
     <!-- Handlebars -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.min.js"></script>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/044e5eeaef.js"></script>
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- CSS -->
@@ -26,7 +28,13 @@
         <li>Titolo: {{title}}</li>
         <li>Titolo originale: {{originalTitle}}</li>
         <li>Lingua: {{originalLanguage}}</li>
-        <li>Voto: {{voteAverage}}</li>
+        <li id="{{id}}">Voto:
+          <i class="fas fa-star vote"></i>
+          <i class="fas fa-star vote"></i>
+          <i class="fas fa-star vote"></i>
+          <i class="fas fa-star vote"></i>
+          <i class="fas fa-star vote"></i>
+        </li>
       </ul>
     </script>
 
