--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
         <li>Titolo: {{title}}</li>
         <li>Titolo originale: {{originalTitle}}</li>
         <li>Lingua: <img src="{{src}}" alt="{{originalLanguage}}"></li>
-        <li id="{{id}}">Voto:
+        <li>Voto: {{{vote_average}}}
+        <!-- <li id="{{id}}">Voto: -->
+          <!-- <i class="fas fa-star vote"></i>
+          <i class="far fa-star vote"></i> -->
+          <!-- <i class="fas fa-star vote"></i>
           <i class="fas fa-star vote"></i>
-          <i class="fas fa-star vote"></i>
-          <i class="fas fa-star vote"></i>
-          <i class="fas fa-star vote"></i>
-          <i class="fas fa-star vote"></i>
+          <i class="fas fa-star vote"></i> -->
         </li>
       </ul>
     </script>
