--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li>Titolo: {{title}}</li>
         <li>Titolo originale: {{originalTitle}}</li>
         <li>Lingua: <img src="{{src}}" alt="{{originalLanguage}}"></li>
-        <li>Voto: {{{vote_average}}}
+        <li>Voto: {{{voteAverage}}}
         <!-- <li id="{{id}}">Voto: -->
           <!-- <i class="fas fa-star vote"></i>
           <i class="far fa-star vote"></i> -->
