--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
     </div>
 
     <div class="film_list"></div>
+    <img src="" alt="">
 
     <!-- Template handelbars -->
     <script id="film-template" type="text/x-handlebars-template">
       <ul class="film">
         <li>Titolo: {{title}}</li>
+        <li> {{{coverPoster}}} </li>
         <li>Titolo originale: {{originalTitle}}</li>
         <li>Lingua: <img src="{{src}}" alt="{{originalLanguage}}"></li>
         <li class="star">Voto: {{{voteAverage}}}
