lavoro su hover 2

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <li>Lingua: <img src="{{src}}" alt="{{{originalLanguage}}}"></li>
             <li class="star">Voto: {{{voteAverage}}}
             </li>
+            <li>Overview: {{overview}}</li>
           </ul>
         </div>
       </div>
@@ -65,6 +66,7 @@
             <li>Lingua: <img src="{{src}}" alt="{{{originalLanguage}}}"></li>
             <li class="star">Voto: {{{voteAverage}}}
             </li>
+            <li>Overview: {{overview}}</li>
           </ul>
         </div>
       </div>
