Correzioni con flex + fine lavoro sul hover

--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
         </div>
 
         <div class="film">
+          <!-- <h1>{{title_h1}}</h1> -->
           <ul>
             <li>Titolo: {{title}}</li>
             <li>Titolo originale: {{originalTitle}}</li>
             <li>Lingua: <img src="{{src}}" alt="{{{originalLanguage}}}"></li>
             <li class="star">Voto: {{{voteAverage}}}
             </li>
-            <li>Overview: {{overview}}</li>
+            <li>Overview: {{overview}} </li>
           </ul>
         </div>
       </div>
